--- a/gpg_wrapper/pubspec.yaml
+++ b/gpg_wrapper/pubspec.yaml
@@ -6,8 +6,9 @@ version: 1.0.0
 environment:
   sdk: '>=2.18.3 <3.0.0'
 
-# dependencies:
-#   path: ^1.8.0
+dependencies:
+  intl: ^0.17.0
+  path: ^1.8.2
 
 dev_dependencies:
   lints: ^2.0.0
