--- a/gpg_desktop/pubspec.yaml
+++ b/gpg_desktop/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
 
+  gpg_wrapper:
+    path: ../gpg_wrapper
+  resizable_widget: ^1.0.5
+  path_provider: ^2.0.11
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
